Ignored folders and DS

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Ignore datasets folder
+datasets/*
+
+# Ignore macOS
+.DS_Store
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
